# mie429-capstone

./: .dockerignore  .env.template  .gitignore  .gitmodules  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docker.yml  lint.yml  test.yml
app/: main.py  test_main.py
