[tool.poetry]
name = "mie429-capstone"
version = "1.1.0"
description = ""
authors = ["Chase McDougall <chasemcdougall@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gdown = "^4.7.1"
future = "^0.18.3"
tqdm = "^4.66.1"
ftfy = "^6.1.3"
regex = "^2023.10.3"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
redisai = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
